Fixes issue #3